# lfs-cookie-consent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/lfs_cookie_consent/static/lfs_cookie_consent/: lfs_cookie_consent.css  lfs_cookie_consent.js
src/lfs_cookie_consent/templates/lfs_cookie_consent/: base.html  cookie_banner.html  cookie_modal.html  gtm_noscript.html  gtm_script.html
src/lfs_cookie_consent/templatetags/: lfs_cookie_consent_tags.py
tests/test_project/: settings.py  urls.py
