[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lfs-cookie-consent"
version = "1.0.0"
description = "Cookie Consent App for LFS/Django"
authors = [
    { name="Kai Diefenbach", email="kai.diefenbach@iqpp.de" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["lfs_cookie_consent"]

[project.optional-dependencies]
test = ["pytest", "pytest-django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_project.settings"
pythonpath = [".", "src"]